tests/parser/var_err21.expected
Syntax Error: line 4:
Unexpected token (TOK_KEY_INTEGER, 'integer'), likely missing a(n)  
  'TOK_SEMICOLON'
