tests/parser/var_err21.mtp
(* variable section start *)

(*variable listing, using keyword as an id*)
var test, integer : integer;

begin

end
.